<resources>
    <string name="app_name">iBrasAct</string>

    <string name="action_settings">Settings</string>
    <string name="action_actualizar">Actualizar</string>

    <!-- Mensajes bienvenida-->
    <string name="TextoBienvenida">Los inventarios mas valiosos</string>
    <string name="TextoPieBienvenida">Se parte de nuestro equipo. P.</string>


    <!-- Login -->
    <string name="title_activity_login">Inicio Session</string>
    <string name="BtnLogin">Entrar</string>

    <!-- My Inventarios -->
    <string name="title_activity_my_inventario">Inventarios</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Row Inventario -->
    <string name="TxvNombreInventario">Nombre</string>
    <string name="TxvDescripcionInventario">Descripcion</string>
    <string name="TxvPrioriInventario">P</string>
    <string name="TxvCountInvnetario">nro</string>

    <!-- Row Activo -->
    <string name="TxvModelo">Modelo:</string>
    <string name="TxvMarca">Marca:</string>
    <string name="TxvSerie">Serie:</string>
    <string name="TxvEstado">Estado</string>
    <string name="TxvTipo">Tipo</string>

    <!-- acciones Activo -->
    <string name="action_activos">Tipo Activo</string>
    <string name="action_guardar">Guardar</string>

    <!-- Layout Caja Fuertes-->
    <string name="TxvColor">Color</string>
    <string name="TxvAlto">Alto</string>
    <string name="TxvAncho">Ancho</string>
    <string name="TxvProfundidad">Profundidad</string>
    <string name="TxtHint">10 cm</string>

    <!-- Layout Computaciones-->
    <string name="TxvUnidad">Unidad:</string>
    <string name="TxvCantidad">Cantidad:</string>
    <string name="TxvMaterial">Material:</string>

    <!-- Layout Extintores-->
    <string name="TxvCodigo">Codigo:</string>
    <string name="TxvNumero">Numero:</string>
    <string name="TxvContenido">Contenido:</string>
    <string name="TxvPeso">Peso:</string>
    <string name="TxvFecha">Renovar:</string>
    <string name="alert_dialog_ok">Aceptar</string>
    <string name="alert_dialog_cancel">Cancelar</string>


</resources>
